# neuters

./: .gitignore  Cargo.toml  Dockerfile  README.md  build.rs  docker-compose.yml
.github/workflows/: build.yml  publish-docker.yml
redirect/: manifest.json  redirect.js
sass/: main.scss
sass/includes/: basic.scss  font.scss  variables.scss
src/: client.rs  main.rs  settings.rs
src/api/: article.rs  byline.rs  common.rs  error.rs  fetch.rs  internet_news.rs  legacy_article.rs  markit.rs  mod.rs  redirect.rs  search.rs  section.rs  topic.rs
src/de/: iso8601.rs  mod.rs  unix.rs
src/render/: byline.rs  graph.rs  images.rs  internet_news_byline.rs  legacy_article_byline.rs  mod.rs
src/routes/: about.rs  article.rs  article_list.rs  internet_news.rs  markets.rs  mod.rs  proxy.rs  search.rs  settings.rs  statics.rs
