[package]
name = "neuters"
version = "0.1.1"
edition = "2021"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
maud = { version = "0.26", features = ["axum"] }
chrono = { version = "0.4", default-features = false, features = ["clock"] }
rustls = { version = "0.21", default-features = false }
rustls-native-certs = "0.6"
pico-args = "0.5.0"
tokio = { version = "1.37.0", features = ["macros", "rt-multi-thread"] }
reqwest = { version = "0.12.3", features = ["json", "rustls-tls-native-roots"] }
axum = "0.7.5"
env_logger = "0.11.3"
log = "0.4.21"

[build-dependencies]
grass = "0.13"
glob = "0.3"

[profile.release]
strip = true
opt-level = 3
lto = "fat"
debug = false
codegen-units = 1
